# house_price_ml_regression_26

./: Dockerfile  README.md  app.py  fly.toml  notebook.ipynb  predict.py  pyproject.toml  quickstart.md  submission_checklist.md  test.py  test_api.py  train.py
docs/: refactoring-proposal.md
